# aki

./: .gitignore  AUTHORS  AkiConfig.cmake.in  CHANGELOG  CMakeLists.txt  COPYING  Doxyfile  INSTALL  Messages.sh  aki.notifyrc  aki.tag  akiversion.h.cmake  akiversion.hpp.cmake  config.hpp.cmake
aki/: CMakeLists.txt  aki.desktop  akiapplication.cpp  akiapplication.h  akiirc.protocol  akiirc6.protocol  akiplugin.desktop  akistatusbar.cpp  akistatusbar.h  akiui.rc  application.cxx  application.hpp  dbus.cpp  dbus.cxx  dbus.h  dbus.hpp  main.cpp  main.cxx  mainwindow.cpp  mainwindow.cxx  mainwindow.h  mainwindow.hpp  singleton.hpp
aki/dialogs/: CMakeLists.txt  addressdialog.cxx  addressdialog.hpp  channeldialog.cxx  channeldialog.hpp  charselectordialog.cpp  charselectordialog.h  colorpage.cpp  colorpage.h  configurationdialog.cxx  configurationdialog.hpp  generalpage.cpp  generalpage.h  identitydialog.cpp  identitydialog.cxx  identitydialog.h  identitydialog.hpp  identitydialog.ui  identitywelcomepage.cpp  identitywelcomepage.h  introwelcomepage.cpp  introwelcomepage.h  ircpage.cpp  ircpage.h  logpage.cpp  logpage.h  networkdialog.cxx  networkdialog.hpp  pluginpage.cpp  pluginpage.h  quickconnection.ui  quickconnectiondialog.cpp  quickconnectiondialog.cxx  quickconnectiondialog.h  quickconnectiondialog.hpp  replacepage.ui  serverdialog.cxx  serverdialog.hpp  serverlistdialog.cxx  serverlistdialog.hpp  (+11 more)
aki/docks/: CMakeLists.txt
aki/icons/: hisc-apps-aki.svgz
aki/plugins/: CMakeLists.txt
aki/ui/: CMakeLists.txt  addresslist.cxx  addresslist.hpp  addresslistmodel.cxx  addresslistmodel.hpp  addressmodel.cxx  addressmodel.hpp  addresswidget.cxx  addresswidget.hpp  blureffect.cxx  blureffect.hpp  channellist.cxx  channellist.hpp  channelmodel.cxx  channelmodel.hpp  channelwidget.cxx  channelwidget.hpp  chatview.cxx  chatview.hpp  encodingcombobox.cxx  encodingcombobox.hpp  identitycombobox.cxx  identitycombobox.hpp  identitymodel.cxx  identitymodel.hpp  networkaddresslist.cxx  networkaddresslist.hpp  networkchannellist.cxx  networkchannellist.hpp  networklist.cxx  networklist.hpp  networklistmodel.cxx  networklistmodel.hpp  networkmodel.cxx  networkmodel.hpp  nicknamelist.cxx  nicknamelist.hpp  nicknamemodel.cxx  nicknamemodel.hpp  nicknamewidget.cxx  (+24 more)
aki/utils/: CMakeLists.txt  bookmarkhandler.cxx  bookmarkhandler.hpp  pluginmanager.cxx  pluginmanager.hpp  themearchive.cxx  themearchive.hpp  themestyle.cxx  themestyle.hpp  themestylemanager.cxx  themestylemanager.hpp
libaki/: CMakeLists.txt  Identity  Server  aki.cxx  aki.hpp  akiplugin.desktop  chatparser.cpp  chatparser.cxx  chatparser.h  chatparser.hpp  debughelper.cxx  debughelper.hpp  identity.cpp  identity.cxx  identity.h  identity.hpp  ircurl.cpp  ircurl.h  libaki_export.h  libaki_export.hpp  logfile.cpp  logfile.h  message.cxx  message.hpp  networkexporter.cpp  networkexporter.h  networkimporter.cpp  networkimporter.h  nicklistmodel.cpp  nicklistmodel.h  nicksort.cpp  nicksort.h  notifications.cpp  notifications.h  server.cpp  server.cxx  server.h  server.hpp  settings.kcfg  settings.kcfgc  (+3 more)
libaki/config/: CMakeLists.txt  ConfigFile  IdentityConfig  ServerConfig  configfile.cpp  configfile.cxx  configfile.h  configfile.hpp  identityconfig.cpp  identityconfig.cxx  identityconfig.h  identityconfig.hpp  replaceconfig.cpp  replaceconfig.h  serverconfig.cpp  serverconfig.cxx  serverconfig.h  serverconfig.hpp
libaki/dialogs/: channeltopicdialog.cpp  channeltopicdialog.h  channeltopicdialog.ui  charselectordialog.cpp  charselectordialog.h  colorpage.cpp  colorpage.h  colorpage.ui  generalpage.cpp  generalpage.h  generalpage.ui  identitydialog.cpp  identitydialog.h  identitywelcomepage.cpp  identitywelcomepage.h  identitywelcomepage.ui  introwelcomepage.cpp  introwelcomepage.h  introwelcomepage.ui  ircpage.cpp  ircpage.h  ircpage.ui  logpage.cpp  logpage.h  logpage.ui  messagelog.cpp  messagelog.h  pluginpage.cpp  pluginpage.h  proxypage.cpp  proxypage.h  proxypage.ui  quickconnection.ui  quickconnectiondialog.cpp  quickconnectiondialog.h  replacedialog.cpp  replacedialog.h  replacedialog.ui  serverpage.cpp  serverpage.cpp~  (+8 more)
libaki/interfaces/: CMakeLists.txt  IBaseWindow  IMainController  ISettingsPage  MainInterface  SettingsPageInterface  WindowInterface  dockwidget.cpp  dockwidget.h  ibasewindow.cxx  ibasewindow.hpp  imaincontroller.cxx  imaincontroller.hpp  isettingspage.cxx  isettingspage.hpp  maininterface.cpp  maininterface.h  settingspageinterface.cpp  settingspageinterface.h  windowinterface.cpp  windowinterface.h
libaki/irc/: ActionReply  AdminReply  AwayReply  BanReply  BaseSocket  CMakeLists.txt  ChannelCreationTimeReply  ChannelMessageReply  ChannelModeReply  ChannelUrlReply  CtcpReply  GlobalUsersReply  InviteReply  InviteSentReply  JoinReply  KickReply  LUserReply  LinksReply  LocalUsersReply  Message  MotdReply  NamesReply  NickInfo  NickReply  NoticeReply  PartReply  PrivateMessageReply  QuitReply  Reply  ReplyCodes  ReplyInfo  Rfc2812  SelfAwayReply  Socket  StartupReply  Text  TopicChangeReply  TopicReply  TopicSetByReply  User  (+84 more)
libaki/plugin/: CMakeLists.txt  Plugin  plugin.cpp  plugin.cxx  plugin.h  plugin.hpp  pluginmanager.cpp  pluginmanager.h
libaki/private/: CMakeLists.txt  chatparser_p.cxx  chatparser_p.hpp  debughelper_p.cxx  debughelper_p.hpp  identity_p.cxx  identity_p.hpp  message_p.cxx  message_p.hpp  server_p.cxx  server_p.hpp  socket_p.cxx  socket_p.hpp
libaki/serverlist/: CMakeLists.txt  jsonparser.cxx  jsonparser.hpp  mircparser.cpp  mircparser.h  networkserializer.cpp  networkserializer.h  serverlistserializer.cxx  serverlistserializer.hpp  xchatparser.cxx  xchatparser.hpp  xmlparser.cpp  xmlparser.h
libaki/sql/: Address  CMakeLists.txt  Channel  Database  Identity  Nickname  Query  Server  Table  address.cxx  address.hpp  channel.cxx  channel.hpp  database.cxx  database.hpp  field.cxx  field.hpp  identity.cxx  identity.hpp  metatable.cxx  (+10 more)
test/: CMakeLists.txt  chatviewtest.cxx  databasetest.cxx  default.xml  default.xsl  encrypttest.cxx  index.html  jsontest.cxx  template.xsl
(+594 files in other folders)
